package com.bloom.jobservice.entity;

public enum SkillType {
    REQUIRED,
    MATCHED,
    MISSING
}